plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.server'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Validator
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // H2
    testImplementation 'com.h2database:h2'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // JUnit5, AssertJ, Mockito
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.mockito:mockito-core:5.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'

    // QueryDsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor("com.querydsl:querydsl-apt:5.0.0:jakarta")
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // JWT
    implementation "io.jsonwebtoken:jjwt-api:0.11.5"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"

    // Configuration processor
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test:5.6.2'

    // OAuth
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // AWS S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // Redis
    implementation group: 'org.springframework.data', name: 'spring-data-redis', version: '3.2.4'
    implementation group: 'io.lettuce', name: 'lettuce-core', version: '6.3.2.RELEASE'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // RabbitMQ
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.17.1'
}

clean {
    delete file('src/main/generated')
}

task copyPrivate(type: Copy) {
    copy {
        from './server-yml'
        include "*.yaml"
        into 'src/main/resources'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
